--- a/docs/授業計画.md
+++ b/docs/授業計画.md
@@ -29,23 +29,93 @@
 
 ## 授業スケジュール（例）
 
-| 週  | トピック                               | 内容                                                                                                | 備考                                   |
-| --- | -------------------------------------- | --------------------------------------------------------------------------------------------------- | -------------------------------------- |
+| 週  | トピック                               | 内容                                                                                                 | 備考                                   |
+| --- | -------------------------------------- | ---------------------------------------------------------------------------------------------------- | -------------------------------------- |
 | 1   | イントロダクションと環境構築           | 授業概要、目標、評価方法、WebアプリとStreamlitの紹介、開発環境準備、最初のアプリ作成 (`st.write`) | PC必須、環境構築サポート             |
-| 2   | Python基礎 (1): 変数、データ型、演算  | Pythonの基本文法、数値、文字列、リストの扱い、簡単な入力 (`st.text_input`)                            |                                        |
-| 3   | Python基礎 (2): 制御構造と関数        | if文、forループ、関数の定義と利用、簡単な対話処理                                                     |                                        |
-| 4   | Streamlit基本 (1): テキストとデータ表示 | `st.markdown`, `st.dataframe`, `st.table`, `st.metric` など、情報の効果的な表示方法              |                                        |
-| 5   | Streamlit基本 (2): レイアウト         | `st.columns`, `st.tabs`, `st.expander`, `st.container` を使った画面構成                          |                                        |
-| 6   | Streamlit発展 (1): 入力ウィジェット   | `st.button`, `st.selectbox`, `st.slider`, `st.date_input` など、ユーザーからの入力受付             |                                        |
-| 7   | Streamlit発展 (2): 状態管理           | `st.session_state` を使ったインタラクティブな動作の実現、ウィジェットとの連携                       | 演習: 簡単な計算機アプリ             |
-| 8   | データ処理入門 (Pandas)               | Pandasライブラリの基礎、CSV/Excelファイルの読み込み (`st.file_uploader`)、データフレーム操作        |                                        |
-| 9   | データ可視化 (1): 基本グラフ          | `st.line_chart`, `st.bar_chart`, `st.scatter_chart` など、Streamlit標準のグラフ機能               | 演習: 簡単なデータセットの可視化       |
-| 10  | データ可視化 (2): 応用グラフ          | Plotly Express, Matplotlib, Seaborn 等のライブラリ連携、より表現力豊かなグラフ作成                  |                                        |
-| 11  | アプリケーション構築 (1): 構造化      | 複数ページアプリの作成、コードの整理（関数化、モジュール化）                                      |                                        |
-| 12  | アプリケーション構築 (2): 応用機能    | `st.form` による入力の一括処理、メディア表示 (`st.image`, `st.video`)、キャッシュ機能 (`st.cache`) |                                        |
-| 13  | 最終課題テーマ設定と設計              | 最終課題の説明、テーマ選定、アイデアソン、アプリケーション設計                                    | グループワークまたは個人ワーク       |
-| 14  | 最終課題制作・個別相談                | 各自でのアプリケーション開発、質疑応答、技術サポート                                                |                                        |
+| 2   | Python基礎 (1): 変数、データ型、演算  | Pythonの基本文法、数値、文字列の扱い                                                                 |                                        |
+| 3   | Python基礎 (2): 制御構造             | if文、forループ、whileループなど                                                                         |                                        |
+| 4   | Python基礎 (3): 関数、辞書、インポート | 関数の定義と利用、辞書、基本的な使い方、モジュールのインポート (`import`)、`datetime` モジュールの基本（日付・時刻の扱い）、コールバック関数の概念 |                                        |
+| 5   | Streamlit基本 (1): 基本表示とインタラクション | `st.write`, `st.header`, `st.markdown`, `st.button`, `st.checkbox`                               | アプリの基礎と最初の対話        |
+| 6   | Streamlit基本 (2): 多様な入力ウィジェット | `st.selectbox`, `st.multiselect`, `st.slider` (数値/日付/時刻), `st.number_input`, `st.text_input` | ユーザーからのデータ受け取り      |
+| 7   | Streamlit基本 (3): レイアウト、状態管理、ファイル入力 | レイアウト (`st.columns`, `st.expander`, `st.sidebar`), `st.session_state`, `st.form` と `st.form_submit_button`, `st.file_uploader` (ファイル情報表示) | アプリの構成と高度な対話       |
+| 8   | 課題演習 (1) と GitHub              | これまでの知識を活用した演習、GitHubへのアップロード方法。補足: `st.image`, `st.video`              | 各自で実装、質疑応答                 |
+| 9   | 課題演習 (2) と デプロイ            | 演習アプリ開発の続き、Streamlit Community Cloudへのデプロイ方法。                                      | 各自で実装、質疑応答                 |
+| 10  | データ処理入門 (Pandas)               | Pandas基礎、DataFrame/Series、CSV読込、基本的な選択・フィルタリング、`st.dataframe` での表示         |                                        |
+| 11  | 実践データ分析                       | Pandasを使ったデータ集計・加工（グループ化、結合など）、簡単な統計量の計算、`st.cache_data`/`st.cache_resource` による高速化 | 最終課題で扱うデータ分析の基礎固め   |
+| 12  | データ可視化（基本と応用）             | Streamlit標準グラフ (`st.line_chart`, `st.bar_chart`等)、Plotly Express/Seaborn等を使ったグラフ作成、ライブラリ連携 | 分析結果を効果的に伝える               |
+| 13  | 最終課題テーマ設定と設計              | 最終課題説明、テーマ選定、アイデアソン、アプリ設計。補足: `st.set_page_config`, `st.tabs`, `st.container`, `st.subheader`, メッセージ表示 (`st.info`等) | グループワークまたは個人ワーク       |
+| 14  | 最終課題制作・個別相談                | 各自でのアプリ開発、質疑応答、技術サポート                                                |                                        |
 | 15  | 最終課題発表会とまとめ                | 作成したアプリの発表、フィードバック、コース全体の振り返り                                        |                                        |
+
+## 課題演習テーマ例 (Week 8-9)
+
+Week 8-9 の課題演習では、Week 7までに学習した内容（Pandas や Plotly を除く基本的な Streamlit 機能）を使って、1～2時間程度で完成できる簡単なアプリを作成します。以下はテーマのアイデア例です（難易度は5段階評価）。
+
+1.  **今日のラッキーカラー診断アプリ**
+    *   **概要:** 星座などを選ぶと、今日のラッキーカラーやアドバイス、関連画像を表示します。
+    *   **使う主な機能:** `st.selectbox`, `st.button`, `st.write`/`st.markdown`, `st.image`, Python `if`/`elif` or dictionary.
+    *   **ロジック/データ:** 星座等と結果（色、アドバイス、画像名）の単純な対応付け（辞書等で数行）。画像数枚。準備は非常に容易。
+    *   **難易度:** ★★★★★ (非常に容易)
+
+2.  **おすすめカフェ/ランチ スタイル診断**
+    *   **概要:** 気分や予算などの質問に答えると、おすすめのスタイルと関連画像を表示します。
+    *   **使う主な機能:** `st.radio`, `st.slider`, `st.button`, `st.write`/`st.markdown`, `st.image`, Python `if`/`elif`.
+    *   **ロジック/データ:** 複数入力の組み合わせから結果（スタイル、画像名）を決定するルール（`if`文等）。質問項目を絞れば管理可能。画像数枚。準備は比較的容易。
+    *   **難易度:** ★★★★☆ (比較的容易)
+
+3.  **かんたん自己紹介カード作成ツール**
+    *   **概要:** フォームで名前や好きなこと、アイコン画像などを入力・アップロードし、整形して表示します。
+    *   **使う主な機能:** `st.form`, `st.text_input`, `st.selectbox`, `st.text_area`, `st.file_uploader`, `st.form_submit_button`, `st.image`, `st.write`/`st.markdown`, `st.columns`.
+    *   **ロジック/データ:** フォームでの入力受付、送信時の情報取得、ファイルアップロード処理（表示）、レイアウト。アプリ側の事前データ準備はほぼ不要。
+    *   **難易度:** ★★★★☆ (比較的容易。ファイル処理が少しポイント)
+
+4.  **シンプルなToDoリスト**
+    *   **概要:** テキスト入力でタスクを追加し、チェックボックスで完了管理ができるリストを作成します。
+    *   **使う主な機能:** `st.text_input`, `st.button`, `st.checkbox`, `st.session_state`, `st.write`.
+    *   **ロジック/データ:** `st.session_state` でリストを保持。追加・完了/削除に応じた状態更新ロジック（コールバック等が必要な場合やや複雑）。事前データ不要。
+    *   **難易度:** ★★★☆☆ (やや注意が必要。`st.session_state` の理解が鍵)
+
+5.  **おみくじアプリ**
+    *   **概要:** ボタンを押すとランダムに運勢とメッセージ、関連画像を表示します。
+    *   **使う主な機能:** `st.button`, `st.write`/`st.markdown`, `st.image`, Python `random.choice`.
+    *   **ロジック/データ:** ボタンクリックで結果リストからランダム選択し、対応するメッセージ/画像を表示する単純なロジック。結果リストと対応データ、画像数枚。準備は非常に容易。
+    *   **難易度:** ★★★★★ (非常に容易)
+
+## 最終課題テーマ例（1時間実装・データ分析＆可視化体験重視）
+
+最終課題では、以下の点を満たす簡単なStreamlitアプリケーションを作成します（テーマは各自で選択）。
+
+*   **小規模なデータ** を扱う（アプリ内で入力 or 事前定義した数件のデータ）。
+*   **簡単な集計やフィルタリング** をPythonで行う（複雑なライブラリ不要）。
+*   **Streamlitのグラフ機能** (`st.bar_chart` など) で結果を可視化する。
+*   **ウィジェット操作** (`st.selectbox`, `st.slider`, `st.button` など) によって表示内容が変わる。
+*   **女子大生が関心を持ちやすい** 題材を選ぶ（例：日常、趣味、SNS、美容など）。
+
+以下はテーマのアイデア例です。
+
+1.  **かんたん支出カテゴリ分析**
+    *   **概要:** アプリ内で数件の支出データ（例: カテゴリ、金額）を入力すると、カテゴリごとの合計金額を棒グラフ (`st.bar_chart`) で表示します。「食費」「趣味」「交通費」など、身近なカテゴリで試せます。
+    *   **データ処理:** 入力されたデータ（リストや辞書で保持）を集計する簡単な処理（Pythonの基本）。
+    *   **Streamlit体験:** `st.selectbox` や `st.number_input` でデータを入力し、`st.button` でグラフを更新。自分の入力が即座にグラフに反映される体験。
+    *   **女子大生向け:** お小遣い管理や節約への関心。
+
+2.  **推し活コスパチェッカー**
+    *   **概要:** 推しのグッズやイベントについて、使った金額と満足度（1～5段階）をいくつか入力すると、散布図 (`st.scatter_chart`) で「コスパ」を可視化します。金額が高くても満足度が高ければOK、など発見があるかも。
+    *   **データ処理:** 入力された金額と満足度のペアをリストで保持。
+    *   **Streamlit体験:** `st.number_input` や `st.slider` でデータを入力し、散布図で表示。データポイントがプロットされる様子を確認。
+    *   **女子大生向け:** 推し活という熱中しやすいテーマ。満足度という主観データも扱う面白さ。
+
+3.  **SNS「いいね！」曜日別チェッカー（サンプルデータ版）**
+    *   **概要:** 曜日に紐づいた「いいね！」数のサンプルデータ（数件、リストや辞書で用意）を読み込み、曜日ごとの平均いいね数を棒グラフ (`st.bar_chart`) で表示します。`st.selectbox` で特定の曜日だけ表示することもできます。
+    *   **データ処理:** サンプルデータの簡単な集計（平均など）。`st.selectbox` の値に応じたデータのフィルタリング（if文など）。
+    *   **Streamlit体験:** サンプルデータを使い、`st.selectbox` で表示するデータを切り替える。データとグラフ表示の連動を体験。
+    *   **女子大生向け:** 自分のSNS利用パターンへの関心。（※実際のデータ連携は難しいためサンプルを使用）
+
+4.  **マイベストコスメ（or カフェ）レーダーチャート表示**
+    *   **概要:** 好きなコスメ（またはカフェなど）について、いくつかの評価項目（例: コスパ、デザイン、使い心地）の点数をスライダー (`st.slider`) で入力すると、その評価をレーダーチャート（Plotly Expressなど、もし授業で扱えば）または棒グラフで表示します。
+    *   **データ処理:** スライダーから入力された点数をリストなどで保持。
+    *   **Streamlit体験:** 複数の `st.slider` を使ってデータを入力し、その結果をグラフに反映させる。Plotlyなどの外部ライブラリ連携の初歩（もし授業範囲なら）。
+    *   **女子大生向け:** コスメやカフェなど、好きなものへの評価・こだわりを可視化する楽しさ。
 
 ## 評価方法
 
