--- a/docs/授業計画.md
+++ b/docs/授業計画.md
@@ -40,9 +40,9 @@
 | 7   | Streamlit基本 (3): レイアウト、状態管理、ファイル入力 | レイアウト (`st.columns`, `st.expander`, `st.sidebar`), `st.session_state`, `st.form` と `st.form_submit_button`, `st.file_uploader` (ファイル情報表示) | アプリの構成と高度な対話       |
 | 8   | 課題演習 (1) と GitHub              | これまでの知識を活用した演習、GitHubへのアップロード方法。補足: `st.image`, `st.video`              | 各自で実装、質疑応答                 |
 | 9   | 課題演習 (2) と デプロイ            | 演習アプリ開発の続き、Streamlit Community Cloudへのデプロイ方法。                                      | 各自で実装、質疑応答                 |
-| 10  | データ処理入門 (Pandas)               | Pandas基礎、DataFrame/Series、CSV読込、基本的な選択・フィルタリング、`st.dataframe` での表示         |                                        |
-| 11  | 実践データ分析                       | Pandasを使ったデータ集計・加工（グループ化、結合など）、簡単な統計量の計算、`st.cache_data`/`st.cache_resource` による高速化 | 最終課題で扱うデータ分析の基礎固め   |
-| 12  | データ可視化（基本と応用）             | Streamlit標準グラフ (`st.line_chart`, `st.bar_chart`等)、Plotly Express/Seaborn等を使ったグラフ作成、ライブラリ連携 | 分析結果を効果的に伝える               |
+| 10  | データ処理入門 (Pandas)               | **Pandas基本**: DataFrame, CSV読込, データ観察 (`head`, `info`), 列/行の選択, 条件フィルタリング, `st.dataframe`での表示 | `st.selectbox`で国を選んでデータを表示するアプリ作成まで |
+| 11  | 実践データ分析 (集計とランキング)    | **集計と並び替え**: `groupby`によるグループ化・集計, `sort_values`でのランキング作成, `st.cache_data`による高速化 | `st.slider`で年を選び、その年の国別発行数TOP10を表示 |
+| 12  | データ可視化 (グラフ作成)             | **グラフ作成**: `st.line_chart`, `st.bar_chart`での可視化, Plotly Expressによる高度なグラフ作成（タイトル・ラベル設定） | `st.multiselect`で複数国を選び、時系列グラフで比較 |
 | 13  | 最終課題テーマ設定と設計              | 最終課題説明、テーマ選定、アイデアソン、アプリ設計。補足: `st.set_page_config`, `st.tabs`, `st.container`, `st.subheader`, メッセージ表示 (`st.info`等) | グループワークまたは個人ワーク       |
 | 14  | 最終課題制作・個別相談                | 各自でのアプリ開発、質疑応答、技術サポート                                                |                                        |
 | 15  | 最終課題発表会とまとめ                | 作成したアプリの発表、フィードバック、コース全体の振り返り                                        |                                        |
@@ -85,11 +85,13 @@ Week 8-9 の課題演習では、Week 7までに学習した内容（Pandas や 
 
 最終課題では、以下の点を満たす簡単なStreamlitアプリケーションを作成します（テーマは各自で選択）。
 
-*   **小規模なデータ** を扱う（アプリ内で入力 or 事前定義した数件のデータ）。
+*   **小規模なデータ** を扱う（アプリ内で入力、講師が提供するサンプルデータ、または自分で作成したサンプルデータ）。
 *   **簡単な集計やフィルタリング** をPythonで行う（複雑なライブラリ不要）。
 *   **Streamlitのグラフ機能** (`st.bar_chart` など) で結果を可視化する。
 *   **ウィジェット操作** (`st.selectbox`, `st.slider`, `st.button` など) によって表示内容が変わる。
 *   **女子大生が関心を持ちやすい** 題材を選ぶ（例：日常、趣味、SNS、美容など）。
+
+**注意：** 最終課題用のデータについては、現在収集中です。講師が提供するサンプルデータまたは、各自でシンプルなサンプルデータを作成して使用します。
 
 以下はテーマのアイデア例です。
 
@@ -116,6 +118,21 @@ Week 8-9 の課題演習では、Week 7までに学習した内容（Pandas や 
     *   **データ処理:** スライダーから入力された点数をリストなどで保持。
     *   **Streamlit体験:** 複数の `st.slider` を使ってデータを入力し、その結果をグラフに反映させる。Plotlyなどの外部ライブラリ連携の初歩（もし授業範囲なら）。
     *   **女子大生向け:** コスメやカフェなど、好きなものへの評価・こだわりを可視化する楽しさ。
+
+## 授業で使用するデータについて
+
+### 第10～12回で使用するデータ
+**使用データ：** [Visa Issuance by Nationality and Region in Japan](https://www.kaggle.com/datasets/yutodennou/visa-issuance-by-nationality-and-region-in-japan)
+- **内容：** 日本への旅行者数（国籍・地域別のビザ発行数）
+- **活用方法：**
+  - 第10回：Pandasでの基本的なデータ読み込み・表示
+  - 第11回：国籍別・地域別の集計、時系列分析、ランキング作成
+  - 第12回：時系列グラフ、棒グラフ、円グラフなどでの可視化
+
+### 最終課題で使用するデータ
+**現在データ収集中** のため、以下のいずれかの方法でデータを準備します：
+1. **講師提供のサンプルデータ**：女子大生の関心に合わせた小規模データセット
+2. **各自作成のサンプルデータ**：テーマに応じて数件～数十件程度の簡単なデータを作成
 
 ## 評価方法
 
