--- a/docs/授業計画.md
+++ b/docs/授業計画.md
@@ -43,9 +43,9 @@
 | 10  | データ処理入門 (Pandas)               | **Pandas基本**: DataFrame, CSV読込, データ観察 (`head`, `info`), 列/行の選択, 条件フィルタリング, `st.dataframe`での表示 | `st.selectbox`で国を選んでデータを表示するアプリ作成まで |
 | 11  | 実践データ分析 (集計とランキング)    | **集計と並び替え**: `groupby`によるグループ化・集計, `sort_values`でのランキング作成, `st.cache_data`による高速化 | `st.slider`で年を選び、その年の国別発行数TOP10を表示 |
 | 12  | データ可視化 (グラフ作成)             | **グラフ作成**: `st.line_chart`, `st.bar_chart`での可視化, Plotly Expressによる高度なグラフ作成（タイトル・ラベル設定） | `st.multiselect`で複数国を選び、時系列グラフで比較 |
-| 13  | 最終課題テーマ設定と設計              | 最終課題説明、テーマ選定、アイデアソン、アプリ設計。補足: `st.set_page_config`, `st.tabs`, `st.container`, `st.subheader`, メッセージ表示 (`st.info`等) | グループワークまたは個人ワーク       |
-| 14  | 最終課題制作・個別相談                | 各自でのアプリ開発、質疑応答、技術サポート                                                |                                        |
-| 15  | 最終課題発表会とまとめ                | 作成したアプリの発表、フィードバック、コース全体の振り返り                                        |                                        |
+| 13  | 最終課題演習（1）                     | 最終課題説明、テーマ選定・設計、アプリ制作開始。補足: `st.set_page_config`, `st.tabs`, `st.container`, `st.subheader`, メッセージ表示 (`st.info`等) | 各自でのアプリ開発、質疑応答           |
+| 14  | 最終課題演習（2）とデプロイ            | 最終課題制作の続き、完成、GitHubへのアップロード、Streamlit Community Cloudへのデプロイ                                                | 各自でのアプリ開発、技術サポート       |
+| 15  | 最終課題発表会と相互評価              | 作成したアプリの発表、相互評価、フィードバック、コース全体の振り返り                                        | 発表・評価・まとめ                     |
 
 ## 課題演習テーマ例 (Week 8-9)
 
